# ChangeLog for sys-apps/darwin-miscutils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  9 Nov 2006; Fabian Groffen <grobian@gentoo.org> :

  Initial import of darwin-miscutils, a package with the tools found in
  Darwin: cal, calendar, leave, lock, units.
  