@@ -1,16 +1,17 @@
 DIST misc_cmds-18.tar.gz 96635 RMD160 54683cf6a50d0aaf2aa9d920c5b592d995633e5c SHA1 55a0e3428b881100cd06d8d4263c2a8f30ad0f11 SHA256 dcc4b199cdb4d40cabd1dd58cc3498878751d9746ad736ada0177a86236d187e
-EBUILD darwin-miscutils-18.ebuild 939 RMD160 e24967b9fd78b91d89417204bcebca0dcb81c9db SHA1 457d75e6ce052be350465dde961bb5bc70c10da7 SHA256 a46dcac24291f0775e6f8c36d1ed0ff292b523d73cfbb4411b62d10f478f0aa0
-MD5 4a2f6add3199133b220c50de58c2a7a7 darwin-miscutils-18.ebuild 939
-RMD160 e24967b9fd78b91d89417204bcebca0dcb81c9db darwin-miscutils-18.ebuild 939
-SHA256 a46dcac24291f0775e6f8c36d1ed0ff292b523d73cfbb4411b62d10f478f0aa0 darwin-miscutils-18.ebuild 939
-MISC ChangeLog 299 RMD160 2761b459981395539e4c7b5835f5e9f99139d997 SHA1 09ea7139f6e3848b88290f1e4703436bc9957733 SHA256 d8b3bcf9082d1ef757f44c3e0578ba07d9c7f837cf230ab7e26bd4560dfee29d
-MD5 7f3c8494b9b573a2178683ea34d40d0e ChangeLog 299
-RMD160 2761b459981395539e4c7b5835f5e9f99139d997 ChangeLog 299
-SHA256 d8b3bcf9082d1ef757f44c3e0578ba07d9c7f837cf230ab7e26bd4560dfee29d ChangeLog 299
+DIST shell_cmds-74.1.tar.gz 153454 RMD160 9f0e38c1f6622ca884fa30cb7178d1c17ec28cb4 SHA1 a0d946c5e3013f1cd96e5e7d61f17be7b91ba813 SHA256 80c2307d5352cb2c9115eef014531ac039b3c85c4c25142720d5ee18ffd87ef2
+EBUILD darwin-miscutils-2.ebuild 2373 RMD160 b57b53b4757cebc704361249ce4d69bcd9b801f0 SHA1 4771676e2c1dd0f75b26ac17001a209a36916b3b SHA256 49cdb5f2569b2e1e86b62278e99af0f0f2706f9915011a73e176c7d4c72c7bb8
+MD5 6c9a17689d7ef7e494b88d45e604f92f darwin-miscutils-2.ebuild 2373
+RMD160 b57b53b4757cebc704361249ce4d69bcd9b801f0 darwin-miscutils-2.ebuild 2373
+SHA256 49cdb5f2569b2e1e86b62278e99af0f0f2706f9915011a73e176c7d4c72c7bb8 darwin-miscutils-2.ebuild 2373
+MISC ChangeLog 725 RMD160 14eafa97039c4396dafb6826ef8c69d2a47a76b6 SHA1 32b64cc58f6c43991560b9bfeae262646a34191b SHA256 6082d257a4f16ecf5d3113381b7293786432230a44b922f0739e30ed4d1b63f1
+MD5 cc8eeaca7dd7f82ca270085c1e9f8dff ChangeLog 725
+RMD160 14eafa97039c4396dafb6826ef8c69d2a47a76b6 ChangeLog 725
+SHA256 6082d257a4f16ecf5d3113381b7293786432230a44b922f0739e30ed4d1b63f1 ChangeLog 725
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-MD5 ae3f1d61e473cd5865dd17b69c8f8e65 files/digest-darwin-miscutils-18 235
-RMD160 d6b506006625623565366e1496dd2490ab78f193 files/digest-darwin-miscutils-18 235
-SHA256 3525aeb068d10a0a36f16b0e616a6ba63e05eb53293e7aada41574a4ffdebb25 files/digest-darwin-miscutils-18 235
+MD5 10b2108fe745964ea3ae1d0e8580b550 files/digest-darwin-miscutils-2 482
+RMD160 b02b9eeb749779c4c18dbb9a8a218296915cac98 files/digest-darwin-miscutils-2 482
+SHA256 7ce45d92b8c52fee8651b1475501807d71ccba7c5ed7886876f59d66b0ee9bc0 files/digest-darwin-miscutils-2 482
