@@ -1,3 +1,0 @@
-MD5 c5b9c9087ccf366f11841cdb94f92aaa misc_cmds-18.tar.gz 96635
-RMD160 54683cf6a50d0aaf2aa9d920c5b592d995633e5c misc_cmds-18.tar.gz 96635
-SHA256 dcc4b199cdb4d40cabd1dd58cc3498878751d9746ad736ada0177a86236d187e misc_cmds-18.tar.gz 96635
