@@ -1,0 +1,6 @@
+MD5 c5b9c9087ccf366f11841cdb94f92aaa misc_cmds-18.tar.gz 96635
+RMD160 54683cf6a50d0aaf2aa9d920c5b592d995633e5c misc_cmds-18.tar.gz 96635
+SHA256 dcc4b199cdb4d40cabd1dd58cc3498878751d9746ad736ada0177a86236d187e misc_cmds-18.tar.gz 96635
+MD5 717a8d11362e1544748f57e2a8917eb7 shell_cmds-74.1.tar.gz 153454
+RMD160 9f0e38c1f6622ca884fa30cb7178d1c17ec28cb4 shell_cmds-74.1.tar.gz 153454
+SHA256 80c2307d5352cb2c9115eef014531ac039b3c85c4c25142720d5ee18ffd87ef2 shell_cmds-74.1.tar.gz 153454
